Reset fallback state on decoder reinit

Currently, in DecoderStream, the following scenario can happen:
A DecoderStream is properly initialized and the decoder emits a frame.
We set a flag that indicates that no decoder fallbacks should be
attempted. Then, a config change is received, the decoder is
reinitialized, and the first decode fails (because the new config is not
valid for this decoder). The DecoderStream then errors out completely.

This change resets the fallback flag on decoder reinit, in order to
allow attempts to fallback to a new decoder after config changes.

Bug: 735335
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I4fd6105768058e2ec3c8b3bcd7f4fdce00f0b90b
Reviewed-on: https://chromium-review.googlesource.com/601210
Commit-Queue: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492526}
Former-commit-id: 134faa57d0833002fa84cbffff2d30977a43d310