media/filters/decoder_stream.cc
@@ -754,6 +754,14 @@ void DecoderStream<StreamType>::CompleteDecoderReinitialization(bool success) {
     return;
   }
 
+  // Re-enable fallback to software after reinitialization. This is the last
+  // place we can clear that state, and as such is the least likely to interfere
+  // with the rest of the fallback algorithm.
+  // TODO(tguilbert): investigate setting this flag at an earlier time. This
+  // could fix the hypothetical edge case of receiving a decode error when
+  // flushing the decoder during a seek operation.
+  decoder_produced_a_frame_ = false;
+
   ReadFromDemuxerStream();
 }
 
